INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/ace)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/gen_rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/nedmalloc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/tinyxml)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../depend)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}  		 COMMON_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/rpc RPC0_FILES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/ace RPC1_FILES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/gen_rpc RPC2_FILES)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/tinyxml TINYXML_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/lua 	 LUA_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/json 	 JSON_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/nedmalloc NED_MALLOC)

ADD_LIBRARY(common STATIC  ${LUA_SRC} ${JSON_SRC} ${TINYXML_SRC} ${NED_MALLOC} ${COMMON_SRC} ${RPC0_FILES} ${RPC1_FILES} ${RPC2_FILES}  )

