INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../depend)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/routine)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}   DB_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/routine ROUTINE_SRC)

ADD_EXECUTABLE(db ${DB_SRC} ${ROUTINE_SRC})

TARGET_LINK_LIBRARIES(db common)
IF(WIN32)
	TARGET_LINK_LIBRARIES(db ACEd.lib)
	TARGET_LINK_LIBRARIES(db sqlite3.lib)
ELSEIF(UNIX)
	TARGET_LINK_LIBRARIES(db libACE.a)
	TARGET_LINK_LIBRARIES(db libsupc++.a)
	TARGET_LINK_LIBRARIES(db pthread)
	TARGET_LINK_LIBRARIES(db dl)
	TARGET_LINK_LIBRARIES(db rt)
	TARGET_LINK_LIBRARIES(db z)
	TARGET_LINK_LIBRARIES(db libmysqlcppconn-static.a)
	TARGET_LINK_LIBRARIES(db ${Boost_LIBRARIES})
ENDIF()

ADD_DEPENDENCIES(db common)
INSTALL(TARGETS	db RUNTIME DESTINATION bin )
