INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}   GATEWAY_SRC)

ADD_EXECUTABLE(gateway ${GATEWAY_SRC})

TARGET_LINK_LIBRARIES(gateway common)
IF(WIN32)
	TARGET_LINK_LIBRARIES(gateway ACEd.lib)
ELSEIF(UNIX)
	TARGET_LINK_LIBRARIES(gateway libACE.a)
	TARGET_LINK_LIBRARIES(gateway libsupc++.a)
	TARGET_LINK_LIBRARIES(gateway pthread)
	TARGET_LINK_LIBRARIES(gateway dl)
	TARGET_LINK_LIBRARIES(gateway z)
	TARGET_LINK_LIBRARIES(gateway ${Boost_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(gateway common)
INSTALL(TARGETS	gateway RUNTIME DESTINATION bin )
