INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../tables)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} GMT_SRC)
ADD_EXECUTABLE(gmtool ${GMT_SRC})


TARGET_LINK_LIBRARIES(gmtool tables)
TARGET_LINK_LIBRARIES(gmtool common)
IF(WIN32)
	TARGET_LINK_LIBRARIES(gmtool ACEd.lib)
	TARGET_LINK_LIBRARIES(gmtool sqlite3.lib)
ELSEIF(UNIX)
	TARGET_LINK_LIBRARIES(gmtool libACE.a)
	TARGET_LINK_LIBRARIES(gmtool libsupc++.a)
	TARGET_LINK_LIBRARIES(gmtool libmysqlcppconn-static.a)
	TARGET_LINK_LIBRARIES(gmtool pthread)
	TARGET_LINK_LIBRARIES(gmtool dl)
	TARGET_LINK_LIBRARIES(gmtool rt)
	TARGET_LINK_LIBRARIES(gmtool z)
	TARGET_LINK_LIBRARIES(gmtool ${Boost_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(gmtool common)
ADD_DEPENDENCIES(gmtool tables)
INSTALL(TARGETS	gmtool RUNTIME DESTINATION bin )
