INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/routine)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} LOG_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/routine ROUTINE_SRC)
ADD_EXECUTABLE(logser ${LOG_SRC} ${ROUTINE_SRC})

TARGET_LINK_LIBRARIES(logser common)

IF(WIN32)
	TARGET_LINK_LIBRARIES(logser ACEd.lib)
	TARGET_LINK_LIBRARIES(logser sqlite3.lib)
ELSEIF(UNIX)
	TARGET_LINK_LIBRARIES(logser libACE.a)
	TARGET_LINK_LIBRARIES(logser libsupc++.a)
	TARGET_LINK_LIBRARIES(logser libmysqlcppconn-static.a)
	TARGET_LINK_LIBRARIES(logser pthread)
	TARGET_LINK_LIBRARIES(logser dl)
	TARGET_LINK_LIBRARIES(logser rt)
	TARGET_LINK_LIBRARIES(logser z)
	TARGET_LINK_LIBRARIES(logser ${Boost_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(logser common)
INSTALL(TARGETS	logser RUNTIME DESTINATION bin )
