INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/routine)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} LOGIN_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/routine ROUTINE_SRC)
ADD_EXECUTABLE(login ${LOGIN_SRC} ${ROUTINE_SRC})

TARGET_LINK_LIBRARIES(login common)

IF(WIN32)
	TARGET_LINK_LIBRARIES(login ACEd.lib)
	TARGET_LINK_LIBRARIES(login sqlite3.lib)
ELSEIF(UNIX)
	TARGET_LINK_LIBRARIES(login libACE.a)
	TARGET_LINK_LIBRARIES(login libsupc++.a)
	TARGET_LINK_LIBRARIES(login pthread)
	TARGET_LINK_LIBRARIES(login dl)
	TARGET_LINK_LIBRARIES(login rt)
	TARGET_LINK_LIBRARIES(login z)
	TARGET_LINK_LIBRARIES(login libmysqlcppconn-static.a)
	TARGET_LINK_LIBRARIES(login ${Boost_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(login common)
INSTALL(TARGETS	login RUNTIME DESTINATION bin )
