INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/routine)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} MALL_SRC)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/routine ROUTINE_SRC)
ADD_EXECUTABLE(mall ${MALL_SRC} ${ROUTINE_SRC})

TARGET_LINK_LIBRARIES(mall common)

IF(WIN32)
	TARGET_LINK_LIBRARIES(mall ACEd.lib)
	TARGET_LINK_LIBRARIES(mall sqlite3.lib)
ELSEIF(UNIX)
	TARGET_LINK_LIBRARIES(mall libACE.a)
	TARGET_LINK_LIBRARIES(mall libmysqlcppconn-static.a)
	TARGET_LINK_LIBRARIES(mall pthread)
	TARGET_LINK_LIBRARIES(mall dl)
	TARGET_LINK_LIBRARIES(mall rt)
	TARGET_LINK_LIBRARIES(mall z)
	TARGET_LINK_LIBRARIES(mall ${Boost_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(mall common)
INSTALL(TARGETS	mall RUNTIME DESTINATION bin )
