INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../tables)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/lua)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/rpc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common/gen_rpc)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} SCENE_SRC)
ADD_EXECUTABLE(scene ${SCENE_SRC})

TARGET_LINK_LIBRARIES(scene tables)
TARGET_LINK_LIBRARIES(scene common)

IF(WIN32)
	TARGET_LINK_LIBRARIES(scene ACEd.lib)
	TARGET_LINK_LIBRARIES(scene sqlite3.lib)
ELSEIF(UNIX)
	TARGET_LINK_LIBRARIES(scene libACE.a)
	TARGET_LINK_LIBRARIES(scene pthread)
	TARGET_LINK_LIBRARIES(scene dl)
	TARGET_LINK_LIBRARIES(scene rt)
	TARGET_LINK_LIBRARIES(scene z)
	TARGET_LINK_LIBRARIES(scene ${Boost_LIBRARIES})
ENDIF()
ADD_DEPENDENCIES(scene common)
ADD_DEPENDENCIES(scene tables)
INSTALL(TARGETS	scene RUNTIME DESTINATION bin )
